@@ -174,6 +174,18 @@
           <td>{TXT_ACCESS_MAX_FILE_SIZE}</td>
           <td><input type="text" name="accessMaxProfilePicSize" value="{ACCESS_MAX_PROFILE_PIC_SIZE}" style="width:300px;" /></td>
         </tr>
+        <tr class="row1">
+          <td>{TXT_ACCESS_THUMBNAIL_GENERATION}</td>
+          <td>
+            <select name="accessProfileThumbnailMethod" size="1" style="width:300px;" onchange="document.getElementById('accessProfileThumbnailMethodBox').style.display=this.value=='scale' ? 'inline' : 'none'">
+                <option value="crop" {ACCESS_PROFILE_THUMBNAIL_CROP}>{TXT_ACCESS_CROP_THUMBNAIL_TXT}</option>
+                <option value="scale" {ACCESS_PROFILE_THUMBNAIL_SCALE}>{TXT_ACCESS_SCALE_THUMBNAIL_TXT}</option>
+            </select>
+            <div id="accessProfileThumbnailMethodBox" style="display:{ACCESS_PROFILE_THUMBNAIL_SCALE_BOX};">
+                {TXT_ACCESS_BACKGROUND_COLOR}: <input type="text" name="accessProfileThumbnailScaleColor" value="{ACCESS_PROFILE_THUMBNAIL_SCALE_COLOR}" />
+            </div>
+          </td>
+        </tr>
         <tr class="row2">
           <td colspan="2">&nbsp;</td>
         </tr>
